--- a/explore.html
+++ b/explore.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-    <script type="module" crossorigin src="/coffee/assets/main-3A1S_w1k.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-DkcNx8EN.css">
+  <link rel="preload" href="/coffee/assets/ChenYuluoyan-2.0-Thin-CUaGSzYh.woff2" as="font" type="font/woff2" href="/assets/fonts/Poppins-Regular.woff2" crossorigin="anonymous" fetchpriority="high" />
+    <script type="module" crossorigin src="/coffee/assets/main-Dy3xY7MP.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-0HjRkuJo.css">
   </head>
 
 <body>
@@ -155,7 +156,7 @@
             </div>
           </div>
 
-          <div class="text-start">
+          <div class="text-start text-md-center">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -194,7 +195,7 @@
             </div>
           </div>
 
-          <div class="text-start">
+          <div class="text-start text-md-center">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -224,7 +225,7 @@
 
           </div>
 
-          <div class="text-start">
+          <div class="text-start text-md-center">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -268,7 +269,7 @@
             </div>
           </div>
 
-          <div class="text-start">
+          <div class="text-start text-md-center">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -298,7 +299,7 @@
             </div>
           </div>
 
-          <div class="text-start">
+          <div class="text-start text-md-center">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
