--- a/pages/about.html
+++ b/pages/about.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>關於羊蹄</title>
+    <%- include('./layout/style'); -%>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>關於羊蹄</title>
-  <%- include('./layout/style'); -%>
-</head>
-
-<body>
-  <%- include('./layout/header'); -%>
+  <body>
+    <%- include('./layout/header'); -%>
 
     <main class="">
       <div class="about-1">
@@ -24,29 +23,132 @@
         <div class="about-position text-primary-950">
           <div class="d-flex mb-56">
             <h2 class="heading-xlarge">品牌故事</h2>
-            <p class="horizontal"></p>
+            <p class="about-horizontal"></p>
           </div>
           <h3 class="paragraph-medium mb-40">Sheepo Coffee 羊蹄咖啡</h3>
           <p>取​名源自於​咖​啡豆​的​故事​</p>
-          <p>傳說​衣索​比亞​的​高原​上，​有​個牧羊人​看到​自家​的​綿羊​不​知道​為何​特別​有​精神</p>
-          <p class="mb-40">走進​一​看​才​發現​他​們啃食​了​某種​紅色果實，​而​這指​的​正是​咖啡​漿果。​</p>
+          <p>
+            傳說​衣索​比亞​的​高原​上，​有​個牧羊人​看到​自家​的​綿羊​不​知道​為何​特別​有​精神
+          </p>
+          <p class="mb-40">
+            走進​一​看​才​發現​他​們啃食​了​某種​紅色果實，​而​這指​的​正是​咖啡​漿果。​
+          </p>
           <p>​取羊蹄​為名，​就​是​要​特別​強調步步​踏實​的​精神。​</p>
           <p>與​獨立尋豆師​合作，​持續​的​找尋​獨具​特色​的​咖啡​生豆。​</p>
-          <p class="mb-56">從​烘焙​到​沖煮，​皆​是​我​們親​自生​產​與​測試，​為​的​就​是​建立​品質​的​一​致性。​</p>
-          <p class="Paragraph/Medium text-primary-500">「我​們​不​想​只​賣​咖啡，​我​想​賣​一​種值得​信賴​的​味道。」​</p>
+          <p class="mb-56">
+            從​烘焙​到​沖煮，​皆​是​我​們親​自生​產​與​測試，​為​的​就​是​建立​品質​的​一​致性。​
+          </p>
+          <p class="Paragraph/Medium text-primary-500">
+            「我​們​不​想​只​賣​咖啡，​我​想​賣​一​種值得​信賴​的​味道。」​
+          </p>
+        </div>
+      </div>
+
+      <!-- service -->
+      <div class="container">
+        <div class="service">
+          <div class="text-center service-title">
+            <h3 class="heading-small text-accent-300 pb-12">Service</h3>
+            <h2 class="heading-xxlarge text-primary-950">服務項目</h2>
+          </div>
+
+          <!-- Book a tasting -->
+          <div class="row book">
+            <div class="booking-left pe-40 col-md-6">
+              <h2 class="heading-xlarge text-primary-950 booking-spacing pb-12">
+                預約試喝
+              </h2>
+              <div class="d-flex mb-40">
+                <h3 class="label-large text-primary-950">Book a tasting</h3>
+                <p class="service-horizontal"></p>
+              </div>
+
+              <div class="paragraph-large text-primary-950 mb-40">
+                <p>由於工作室內空間有限，目前暫無開放內用服務。</p>
+                <p>
+                  若您有咖啡試飲需求，歡迎填寫預約表單，我們將為您保留專屬時段。
+                </p>
+                <br />
+                <p>每日各時段僅開放 一組預約，最多可 5 位同行入場</p>
+                <p>讓我們有足夠時間，與您分享每一杯咖啡的風味故事</p>
+              </div>
+
+              <div class="btn-ground">
+                <button
+                  type="button"
+                  class="btn btn-primary-800 rounded-pill btn-pd">
+                  立即預約
+                </button>
+              </div>
+          </div>
+
+          <div class="booking-right col-md-6">
+            <img src="/assets/images/index/about-2.png" alt="" />
+          </div>
+
+          </div>
 
 
 
+      <div class="container">
+
+
+          <!-- Business Cooperation -->
+          <div class="row book">
+            <div class="booking-left pe-40 col-md-6">
+              <h2 class="heading-xlarge text-primary-950 booking-spacing pb-12">
+                商業合作
+              </h2>
+              <div class="d-flex mb-40">
+                <h3 class="label-large text-primary-950">Business Cooperation</h3>
+                <p class="service-horizontal"></p>
+              </div>
+
+              <div class="paragraph-large text-primary-950 mb-40">
+                <p>工作室提供以下服務：</p><br>
+                <ul>
+                  <li>代客烘焙、客製化禮盒</li>
+                  <li>公司行號&營業用咖啡豆批發</li>
+                  <li>不定期舉辦課程、講座、活動</li>
+                </ul>
+                <br>
+                <p>若您有商業合作需求，歡迎填寫洽詢表單 
+                  <br>我們會與您聯繫。
+                </p>
+              </div>
+
+              <div class="btn-ground">
+                <button
+                  type="button"
+                  class="btn btn-primary-800 rounded-pill btn-pd">
+                  立即預約
+                </button>
+              </div>
+          </div>
+
+          <div class="booking-right col-md-6">
+            <img src="/assets/images/index/about-1.png" alt="" />
+          </div>
+
+          </div>
 
         </div>
       </div>
 
+
+    <!-- FAQ -->
+      <div>
+        <div class="service">
+          <div class="text-center service-title">
+            <h3 class="heading-small text-accent-300 pb-12">FAQ</h3>
+            <h2 class="heading-xxlarge text-primary-950">常見ＱＡ</h2>
+          </div>
+      </div>
+
     </main>
 
-    
     <%- include('./layout/footer'); -%>
-      <script type="module" src="../main.js"></script>
-      <%- include('./layout/js'); -%>
-</body>
-
+    <script type="module" src="../main.js"></script>
+    <%- include('./layout/js'); -%>
+  </body>
 </html>
