--- a/pages/index.html
+++ b/pages/index.html
@@ -87,11 +87,129 @@
         </div>
       </div>
       <div class="container py-120">
-        <div class="new mb-64">
+        <div class="new">
           <p class="heading-small ls-2 text-accent-300 mb-12">NEW</p>
           <div class="title d-flex align-items-center mb-40">
             <p class="heading-xxlarge text-primary-950 ls-2 me-20 mb-0">本月新品</p>
             <div class="horizontal-line2"></div>
+          </div>
+        </div>
+        <div class="row row-cols-md-3 gx-md-64 gx-20 mb-64">
+          <!-- whiteCoffeeCup -->
+          <div class="col">
+            <a href="#" class="text-decoration-none products-link">
+              <div class="card">
+                <!-- 商品照與底色 -->
+                <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
+                  <div class="heartArea">
+                    <label for="whiteCoffeeCup" class="products-label">
+                      <input type="checkbox" id="whiteCoffeeCup" class="productsHeart">
+                      <!-- 實心愛心 -->
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                        class="products-heartFilled">
+                        <path
+                          d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Z"
+                          fill="#5B4530" />
+                      </svg>
+                      <!-- 空心愛心 -->
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                        class="products-heartOutlined">
+                        <path
+                          d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Zm6.548 6.54L12 19.485 4.635 12.12a3.875 3.875 0 1 1 5.48-5.48l1.358 1.357a.75.75 0 0 0 1.073-.012L13.88 6.64a3.88 3.88 0 0 1 5.487 5.48Z"
+                          fill="#ADADAD" />
+                      </svg>
+                    </label>
+                  </div>
+
+                  <img src="/assets/images/productsImg/whiteCoffeeCup.png"
+                    class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
+                    alt="...">
+                </div>
+                <div class="card-body products-bg text-center py-20 px-0">
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙
+                  </h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞
+                    涅里區聯合處理廠</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col">
+            <a href="#" class="text-decoration-none products-link">
+              <div class="card">
+                <!-- 商品照與底色 -->
+                <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
+                  <div class="heartArea">
+                    <label for="greenCoffeeCup" class="products-label">
+                      <input type="checkbox" id="greenCoffeeCup" class="productsHeart">
+                      <!-- 實心愛心 -->
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                        class="products-heartFilled">
+                        <path
+                          d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Z"
+                          fill="#5B4530" />
+                      </svg>
+                      <!-- 空心愛心 -->
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                        class="products-heartOutlined">
+                        <path
+                          d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Zm6.548 6.54L12 19.485 4.635 12.12a3.875 3.875 0 1 1 5.48-5.48l1.358 1.357a.75.75 0 0 0 1.073-.012L13.88 6.64a3.88 3.88 0 0 1 5.487 5.48Z"
+                          fill="#ADADAD" />
+                      </svg>
+                    </label>
+                  </div>
+
+                  <img src="/assets/images/productsImg/greenCoffeeCup.png"
+                    class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
+                    alt="...">
+                </div>
+                <div class="card-body products-bg text-center py-20 px-0">
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 深度烘焙
+                  </h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$280~$600</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col">
+            <a href="#" class="text-decoration-none products-link">
+              <div class="card">
+                <!-- 商品照與底色 -->
+                <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
+                  <div class="heartArea">
+                    <label for="yellowCoffeeCup" class="products-label">
+                      <input type="checkbox" id="yellowCoffeeCup" class="productsHeart">
+                      <!-- 實心愛心 -->
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                        class="products-heartFilled">
+                        <path
+                          d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Z"
+                          fill="#5B4530" />
+                      </svg>
+                      <!-- 空心愛心 -->
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                        class="products-heartOutlined">
+                        <path
+                          d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Zm6.548 6.54L12 19.485 4.635 12.12a3.875 3.875 0 1 1 5.48-5.48l1.358 1.357a.75.75 0 0 0 1.073-.012L13.88 6.64a3.88 3.88 0 0 1 5.487 5.48Z"
+                          fill="#ADADAD" />
+                      </svg>
+                    </label>
+                  </div>
+
+                  <img src="/assets/images/productsImg/yellowCoffeeCup.png"
+                    class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
+                    alt="...">
+                </div>
+                <div class="card-body products-bg text-center py-20 px-0">
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 中度烘焙
+                  </h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">巴西 南米納斯 法罕莊園</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$200~$600</p>
+                </div>
+              </div>
+            </a>
           </div>
         </div>
         <div class="new">
@@ -99,6 +217,124 @@
           <div class="title d-flex align-items-center mb-40">
             <p class="heading-xxlarge text-primary-950 ls-2 me-20 mb-0">熱銷品項</p>
             <div class="horizontal-line2"></div>
+          </div>
+        </div>
+        <div class="row row-cols-md-3 gx-md-64 gx-20 mb-64">
+          <!-- whiteCoffeeCup -->
+          <div class="col">
+            <a href="#" class="text-decoration-none products-link">
+              <div class="card">
+                <!-- 商品照與底色 -->
+                <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
+                  <div class="heartArea">
+                    <label for="whiteCoffeeCup" class="products-label">
+                      <input type="checkbox" id="whiteCoffeeCup" class="productsHeart">
+                      <!-- 實心愛心 -->
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                        class="products-heartFilled">
+                        <path
+                          d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Z"
+                          fill="#5B4530" />
+                      </svg>
+                      <!-- 空心愛心 -->
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                        class="products-heartOutlined">
+                        <path
+                          d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Zm6.548 6.54L12 19.485 4.635 12.12a3.875 3.875 0 1 1 5.48-5.48l1.358 1.357a.75.75 0 0 0 1.073-.012L13.88 6.64a3.88 3.88 0 0 1 5.487 5.48Z"
+                          fill="#ADADAD" />
+                      </svg>
+                    </label>
+                  </div>
+
+                  <img src="/assets/images/productsImg/whiteCoffeeCup.png"
+                    class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
+                    alt="...">
+                </div>
+                <div class="card-body products-bg text-center py-20 px-0">
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙
+                  </h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞
+                    涅里區聯合處理廠</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col">
+            <a href="#" class="text-decoration-none products-link">
+              <div class="card">
+                <!-- 商品照與底色 -->
+                <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
+                  <div class="heartArea">
+                    <label for="greenCoffeeCup" class="products-label">
+                      <input type="checkbox" id="greenCoffeeCup" class="productsHeart">
+                      <!-- 實心愛心 -->
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                        class="products-heartFilled">
+                        <path
+                          d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Z"
+                          fill="#5B4530" />
+                      </svg>
+                      <!-- 空心愛心 -->
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                        class="products-heartOutlined">
+                        <path
+                          d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Zm6.548 6.54L12 19.485 4.635 12.12a3.875 3.875 0 1 1 5.48-5.48l1.358 1.357a.75.75 0 0 0 1.073-.012L13.88 6.64a3.88 3.88 0 0 1 5.487 5.48Z"
+                          fill="#ADADAD" />
+                      </svg>
+                    </label>
+                  </div>
+
+                  <img src="/assets/images/productsImg/greenCoffeeCup.png"
+                    class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
+                    alt="...">
+                </div>
+                <div class="card-body products-bg text-center py-20 px-0">
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 深度烘焙
+                  </h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$280~$600</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col">
+            <a href="#" class="text-decoration-none products-link">
+              <div class="card">
+                <!-- 商品照與底色 -->
+                <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
+                  <div class="heartArea">
+                    <label for="yellowCoffeeCup" class="products-label">
+                      <input type="checkbox" id="yellowCoffeeCup" class="productsHeart">
+                      <!-- 實心愛心 -->
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                        class="products-heartFilled">
+                        <path
+                          d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Z"
+                          fill="#5B4530" />
+                      </svg>
+                      <!-- 空心愛心 -->
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                        class="products-heartOutlined">
+                        <path
+                          d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Zm6.548 6.54L12 19.485 4.635 12.12a3.875 3.875 0 1 1 5.48-5.48l1.358 1.357a.75.75 0 0 0 1.073-.012L13.88 6.64a3.88 3.88 0 0 1 5.487 5.48Z"
+                          fill="#ADADAD" />
+                      </svg>
+                    </label>
+                  </div>
+
+                  <img src="/assets/images/productsImg/yellowCoffeeCup.png"
+                    class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
+                    alt="...">
+                </div>
+                <div class="card-body products-bg text-center py-20 px-0">
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 中度烘焙
+                  </h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">巴西 南米納斯 法罕莊園</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$200~$600</p>
+                </div>
+              </div>
+            </a>
           </div>
         </div>
       </div>
@@ -183,7 +419,11 @@
                     <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
                     <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
                     <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                    <svg width="16" height="17" fill="#2F2119" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M10.788 3.103c.495-1.004 1.926-1.004 2.421 0l2.358 4.777 5.273.766c1.107.161 1.549 1.522.748 2.303l-3.816 3.72.901 5.25c.19 1.103-.968 1.944-1.959 1.424l-4.716-2.48-4.715 2.48c-.99.52-2.148-.32-1.96-1.424l.901-5.25-3.815-3.72c-.801-.78-.359-2.142.748-2.303L8.43 7.88l2.358-4.777Zm1.21.936L9.74 8.615a1.35 1.35 0 0 1-1.016.738l-5.05.734 3.654 3.562c.318.31.463.757.388 1.195l-.862 5.03 4.516-2.375a1.35 1.35 0 0 1 1.257 0l4.516 2.374-.862-5.029a1.35 1.35 0 0 1 .388-1.195l3.654-3.562-5.05-.734a1.35 1.35 0 0 1-1.016-.738l-2.259-4.576Z" fill="#2F2119"/></svg>
+                    <svg width="16" height="17" fill="#2F2119" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M10.788 3.103c.495-1.004 1.926-1.004 2.421 0l2.358 4.777 5.273.766c1.107.161 1.549 1.522.748 2.303l-3.816 3.72.901 5.25c.19 1.103-.968 1.944-1.959 1.424l-4.716-2.48-4.715 2.48c-.99.52-2.148-.32-1.96-1.424l.901-5.25-3.815-3.72c-.801-.78-.359-2.142.748-2.303L8.43 7.88l2.358-4.777Zm1.21.936L9.74 8.615a1.35 1.35 0 0 1-1.016.738l-5.05.734 3.654 3.562c.318.31.463.757.388 1.195l-.862 5.03 4.516-2.375a1.35 1.35 0 0 1 1.257 0l4.516 2.374-.862-5.029a1.35 1.35 0 0 1 .388-1.195l3.654-3.562-5.05-.734a1.35 1.35 0 0 1-1.016-.738l-2.259-4.576Z"
+                        fill="#2F2119" />
+                    </svg>
                   </div>
                   <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
                     手沖愛好者的交流天地，每次來訪都能對咖啡有更新的認識，他們的冷萃也相當不錯！只可惜預約才能來訪~</p>
